[gd_scene load_steps=3 format=3 uid="uid://bv7xvnp1kihph"]

[ext_resource type="Script" path="res://scenes/multiplayer_screen/multiplayer.gd" id="1_tk3yr"]
[ext_resource type="PackedScene" uid="uid://ow5eptqogl0t" path="res://scenes/player/player.tscn" id="2_v7663"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_tk3yr")
player_scene = ExtResource("2_v7663")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1922.0
offset_bottom = 1094.0
color = Color(0, 0, 0, 1)

[node name="Host" type="Button" parent="."]
offset_left = 904.0
offset_top = 473.0
offset_right = 998.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 32
text = "Host Game"

[node name="Join" type="Button" parent="."]
offset_left = 910.0
offset_top = 568.0
offset_right = 918.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 32
text = "Find Game"

[node name="Search" type="Button" parent="."]
visible = false
offset_left = 930.0
offset_top = 789.0
offset_right = 1069.0
offset_bottom = 852.0
theme_override_font_sizes/font_size = 40
text = "Search"

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
offset_left = 847.0
offset_top = 679.0
offset_right = 1215.0
offset_bottom = 756.0
theme_override_font_sizes/font_size = 40
placeholder_text = "Enter ip address:"
wrap_mode = 1

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Search" to="." method="_on_search_pressed"]
